fix(#509): Switch to Camel K CRDs Java model